Fixed an issue where brandsite videos would be embedded at the wrong size
jackjonesfashion/tasks#80

--- a/src/static_files/styles/partials/brandsite-videos.styl
+++ b/src/static_files/styles/partials/brandsite-videos.styl
@@ -37,7 +37,10 @@
 			&:hover
 				opacity 1
 				
-		#vimeoplayer
+		iframe
+			width 1000px
+			height 563px
+
 			@media only screen and (max-width: 1280px)
 				width 750px
 				height 422px
